[gd_scene load_steps=6 format=3 uid="uid://ge6ua8vedeky"]

[ext_resource type="Script" uid="uid://cgxu8cnp63035" path="res://sprites/pause_menu.gd" id="1_71udj"]

[sub_resource type="Theme" id="Theme_jd3tp"]

[sub_resource type="InputEventAction" id="InputEventAction_71udj"]
action = &"ui_cancel"

[sub_resource type="Shortcut" id="Shortcut_bro5c"]
events = [SubResource("InputEventAction_71udj")]

[sub_resource type="Theme" id="Theme_71udj"]
Button/styles/disabled = null
Button/styles/disabled_mirrored = null
Button/styles/focus = null
Button/styles/hover = null
Button/styles/hover_mirrored = null
Button/styles/hover_pressed = null
Button/styles/hover_pressed_mirrored = null
Button/styles/normal = null
Button/styles/normal_mirrored = null
Button/styles/pressed = null
Button/styles/pressed_mirrored = null

[node name="pause_menu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_71udj")

[node name="bg_overlay" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.254902)

[node name="menu_holder" type="VBoxContainer" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -33.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="resume_btn" type="Button" parent="menu_holder"]
layout_mode = 2
theme = SubResource("Theme_jd3tp")
shortcut = SubResource("Shortcut_bro5c")
text = "RESUME"

[node name="quit_btn" type="Button" parent="menu_holder"]
layout_mode = 2
theme = SubResource("Theme_71udj")
text = "QUIT GAME"

[connection signal="pressed" from="menu_holder/resume_btn" to="." method="_on_resume_btn_pressed"]
[connection signal="pressed" from="menu_holder/quit_btn" to="." method="_on_quit_btn_pressed"]
